# EminentReportingTool

./: EminentResponses.ttl  README.md  answer_to_score.py  capability_model.py  generate_report.py  pyproject.toml  questionnaire_data_model.py  questionnaire_processing_functions.py
src/: IMM_to_ld.py  classify_characteristic.py  compute_lvl1_maturity_scores  compute_lvl1_maturity_scores.py  compute_maturiy_scores.py  create_md_report.py  generate_report.py  generic_radar_plot.py  organizations_tube_in_the_cube.py  raw_data_to_maturityscore.py  respondents_tube_in_the_cube.py  responses_to_ld.py  snippet.py  subcapability_radar_plot.py  survey_to_ld.py  tube_in_the_cube.py
tests/: Content_Export_Eminent_DSOiResponse.xml  Content_Export_Eminent_eminentresponses.xml  Content_Export_Eminent_enershare-example.xml  Content_Export_Eminent_testdata2.xml  EUSurveyTestData.xml  EminentQUestionnaire_1.0.0.ttl  EminentQUestionnaire_1.1.0.ttl  EminentQuestionnaireEnrichment.ttl  EminentV2.1.xlsx  eminentresponses.ttl  eusurvey.xsd  imm.ttl  int_net_questionnaire.xlsx  kladblok.py  kladblok.ttl  output.rdf  test1.ttl  test2.ttl  testdata.xlsx
tests/DSOi/: DSOi-2024_Maturity_Report.md
tests/ENERSHARE-example/: ENERSHARE-example_Maturity_Report.md
tests/cim/: cim-expert-group-2024_Maturity_Report.md
tests/data_validation_tests/: generate_validation_report.py
tests/data_validation_tests/shapes/: DataValidationShapes.ttl
tests/sif/: SIF-2024_Maturity_Report.md  cim-expert-group-2024_Maturity_Report.md
