[project]
name = "EminentReportingTool"
version = "0.0.1"
authors = [
  { name="Joep van Genuchten", email="jvangenuchten@epri.com },
]
description = "A package to analyse and publish results from EMINEnT maturity assessment studies"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/int-net/EminentReportingTool"
Issues = "https://github.com/int-net/EminentReportingTool/issues"